Modified options using jcommander.